--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-scripts": "5.0.1",
     "styled-component": "^2.8.0",
     "styled-components": "^5.3.10",
-    "web-vitals": "2.1.4"
+    "web-vitals": "2.1.4",
+    "sass": "^1.60.0"
   },
   "scripts": {
     "start": "react-scripts start",
