--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "redux-actions": "^3.0.0",
     "redux-logger": "^3.0.6",
     "sass": "^1.60.0",
     "styled-component": "^2.8.0",
